# flatscraper

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  scrapy.cfg
flatscraper/: items.py  middlewares.py  pipelines.py  settings.py
flatscraper/spiders/: aruodas.py  domoplius.py  skelbiu.py
