[tool.poetry]
name = "flatscraper"
version = "0.1.0"
description = ""
authors = ["Tomas Gilys <tomas.gilys@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.1"
scrapy-impersonate = "^1.2.0"
pymongo = "^4.6.3"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pylint = "^3.1.0"
isort = "^5.13.2"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
